--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ header, main, footer{
 	width:100%;
 	margin:0;
 	padding:0;
-	font: 1em Helvetica Neue, Helvetica, Arial, sans-serif;;
+	font: 1em Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 
 ul{
